# yomail

./: .gitignore  API.md  ARCHITECTURE.md  CLAUDE.local.md  DESIGN.md  DOCUMENTATION_AUDIT.md  LICENSE  PERFORMANCE.md  PROPOSAL.md  README.md  THIRD_PARTY_LICENSES  WHITESPACE-PLAN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: dump_failures.py  evaluate.py  inspect_example.py  train.py
src/yomail/: __init__.py  __init__.pyi  exceptions.py  exceptions.pyi  extractor.py  extractor.pyi
src/yomail/data/: __init__.py  email_body.crfsuite  names.yaml
src/yomail/patterns/: __init__.py  __init__.pyi  closings.py  closings.pyi  greetings.py  greetings.pyi  names.py  names.pyi  separators.py  separators.pyi  signatures.py  signatures.pyi
src/yomail/pipeline/: __init__.py  __init__.pyi  assembler.py  assembler.pyi  confidence.py  content_filter.py  content_filter.pyi  crf.py  crf.pyi  features.py  features.pyi  normalizer.py  normalizer.pyi  reconstructor.py  reconstructor.pyi  structural.py  structural.pyi
tests/: test_assembler.py  test_confidence.py  test_content_filter.py  test_crf.py  test_extractor.py  test_features.py  test_names.py  test_normalizer.py  test_reconstructor.py  test_structural.py
typings/: neologdn.pyi  pycrfsuite.pyi
