[project]
name = "yomail"
version = "0.1.0"
description = "A lightweight, fast, and highly robust system to extract body text from Japanese business emails"
requires-python = ">=3.13"
dependencies = [
    "neologdn>=0.5.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yomail"]

[tool.ruff]
line-length = 120

[tool.ty.environment]
extra-paths = ["typings"]

[tool.pytest.ini_options]
testpaths = ["tests"]
