[project]
name = "yomail"
version = "0.1.1"
description = "Extract body text from Japanese business emails"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "terallite" },
    { name = "Linus Tan" },
]
keywords = ["japanese", "email", "nlp", "crf", "text-extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Communications :: Email",
    "Natural Language :: Japanese",
    "Typing :: Typed",
]
dependencies = [
    "neologdn>=0.5.6",
    "python-crfsuite>=0.9.12",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/terallite/yomail"
Repository = "https://github.com/terallite/yomail"
Issues = "https://github.com/terallite/yomail/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yomail"]

[tool.hatch.build.targets.wheel.force-include]
"src/yomail/data/names.yaml" = "yomail/data/names.yaml"
"src/yomail/data/email_body.crfsuite" = "yomail/data/email_body.crfsuite"
"src/yomail/py.typed" = "yomail/py.typed"

[tool.ruff]
line-length = 120

[tool.ty.environment]
extra-paths = ["typings"]

[tool.pytest.ini_options]
testpaths = ["tests"]
